--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[/usr/local/glassfish-4.1/glassfish:/usr/local/glassfish-4.
 j2ee.server.middleware=/usr/local/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=/home/sergio/.netbeans/8.0.2/build.properties
